fix scrollbar on firefox

--- a/packages/bpk-component-modal/src/BpKModalV2.module.scss
+++ b/packages/bpk-component-modal/src/BpKModalV2.module.scss
@@ -77,6 +77,7 @@
   inset-block-start: 0;
   inset-inline: 0;
   inset-inline-end: 0;
+  scrollbar-width: none;
 
   @include bpk-box-shadow-xl;
 
